# xinhui

./: .env.example  .gitignore  CLAUDE.md  README.md  food_analysis.json  pyproject.toml
.opencode/: opencode.jsonc
.opencode/agents/: analysis.md  clinical.md  diet-vision.md  diet.md  health.md  prescription.md  report.md
backend/: __init__.py  agent_service.py  api.py  api_v2.py  app_db.py  config.py  consensus.py  data_loader.py  db.py  main.py  replay_data.py  smoothing.py
backend/api_keys/: __init__.py  api.py  models.py  storage.py
backend/artifacts/: __init__.py  api.py  models.py  storage.py
backend/auth/: __init__.py  api.py  models.py  security.py  storage.py
backend/chat/: __init__.py  api.py  context.py  models.py  opencode.py  storage.py
backend/clinical/: __init__.py  api.py  models.py  storage.py
backend/diet/: __init__.py  api.py  models.py  storage.py  vision.py
backend/exercise/: __init__.py  api.py  models.py  storage.py
backend/health/: __init__.py  api.py  models.py  storage.py
backend/healthkit/: api.py  models.py  storage.py
backend/inference/: __init__.py  at_predictor.py  vo2_predictor.py
backend/lifestyle/: __init__.py  api.py  models.py  storage.py
backend/nutrition/: __init__.py  api.py  models.py  storage.py
backend/plans/: __init__.py  (+4 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
knowledge/: README.md  cpet_indicators.md  exercise_prescription.md
scripts/: xinhui.sh
tests/: test_agent_mode.py  test_diet_vision_normalization.py  test_diet_vision_opencode_error.py
tools/: index.html  replay.html
(+131 files in other folders)
